--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,16 +7,165 @@
     android:padding="30dp"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/button1"
+    <TextView
+        android:id="@+id/text_movietitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="buttonClick"
-        android:text="@string/button3"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Movie Title"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/textinput_movietitle"
+        app:layout_constraintBottom_toTopOf="@id/text_director"/>
+
+    <TextView
+        android:id="@+id/text_director"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Director"
+        app:layout_constraintBottom_toTopOf="@id/text_releasedyear"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/textinput_director"
+        app:layout_constraintTop_toBottomOf="@id/text_movietitle" />
+
+    <TextView
+        android:id="@+id/text_releasedyear"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Released Year"
+        app:layout_constraintBottom_toTopOf="@id/button_init"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/textinput_releasedyear"
+        app:layout_constraintTop_toBottomOf="@id/text_director" />
+
+    <EditText
+        android:id="@+id/textinput_movietitle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/textinput_director"
+        app:layout_constraintLeft_toRightOf="@id/text_movietitle"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <EditText
+        android:id="@+id/textinput_director"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/textinput_releasedyear"
+        app:layout_constraintLeft_toRightOf="@id/text_director"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textinput_movietitle" />
+
+    <EditText
+        android:id="@+id/textinput_releasedyear"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/button_init"
+        app:layout_constraintLeft_toRightOf="@id/text_releasedyear"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textinput_director" />
+
+    <Button
+        android:id="@+id/button_init"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="initializeDB"
+        android:text="INIT"
+        app:layout_constraintBottom_toTopOf="@id/scrollView"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/button_insert"
+        app:layout_constraintTop_toBottomOf="@id/textinput_releasedyear" />
+
+    <Button
+        android:id="@+id/button_insert"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="insertDB"
+        android:text="INSERT"
+        app:layout_constraintBottom_toTopOf="@id/scrollView"
+        app:layout_constraintLeft_toRightOf="@id/button_init"
+        app:layout_constraintRight_toLeftOf="@id/button_search"
+        app:layout_constraintTop_toBottomOf="@id/textinput_releasedyear" />
+
+    <Button
+        android:id="@+id/button_search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="searchDB"
+        android:text="SEARCH"
+        app:layout_constraintBottom_toTopOf="@id/scrollView"
+        app:layout_constraintLeft_toRightOf="@id/button_insert"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textinput_releasedyear" />
+
+    <ScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/button_insert"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/text_title_column_one"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toTopOf="@id/text_column_one"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/text_title_column_two"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/text_title_column_two"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toTopOf="@id/text_column_two"
+                app:layout_constraintLeft_toRightOf="@+id/text_title_column_one"
+                app:layout_constraintRight_toLeftOf="@id/text_title_column_three"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/text_title_column_three"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintLeft_toRightOf="@+id/text_title_column_two"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/text_column_three"/>
+
+            <TextView
+                android:id="@+id/text_column_one"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/text_column_two"
+                app:layout_constraintTop_toBottomOf="@id/text_title_column_one" />
+
+            <TextView
+                android:id="@+id/text_column_two"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/text_column_one"
+                app:layout_constraintRight_toLeftOf="@id/text_column_three"
+                app:layout_constraintTop_toBottomOf="@id/text_title_column_two" />
+
+            <TextView
+                android:id="@+id/text_column_three"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/text_column_two"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/text_title_column_three" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
