HW09 - Record and play an audio

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,168 +4,69 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="30dp"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/text_movietitle"
+    <Button
+        android:id="@+id/recordStartButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Movie Title"
+        android:onClick="startRecording"
+        android:text="recording start"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/textinput_movietitle"
-        app:layout_constraintBottom_toTopOf="@id/text_director"/>
-
-    <TextView
-        android:id="@+id/text_director"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Director"
-        app:layout_constraintBottom_toTopOf="@id/text_releasedyear"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/textinput_director"
-        app:layout_constraintTop_toBottomOf="@id/text_movietitle" />
-
-    <TextView
-        android:id="@+id/text_releasedyear"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Released Year"
-        app:layout_constraintBottom_toTopOf="@id/button_init"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/textinput_releasedyear"
-        app:layout_constraintTop_toBottomOf="@id/text_director" />
-
-    <EditText
-        android:id="@+id/textinput_movietitle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/textinput_director"
-        app:layout_constraintLeft_toRightOf="@id/text_movietitle"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/textinput_director"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/textinput_releasedyear"
-        app:layout_constraintLeft_toRightOf="@id/text_director"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textinput_movietitle" />
-
-    <EditText
-        android:id="@+id/textinput_releasedyear"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/button_init"
-        app:layout_constraintLeft_toRightOf="@id/text_releasedyear"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textinput_director" />
+        app:layout_constraintVertical_bias="0.023" />
 
     <Button
-        android:id="@+id/button_init"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="initializeDB"
-        android:text="INIT"
-        app:layout_constraintBottom_toTopOf="@id/scrollView"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/button_insert"
-        app:layout_constraintTop_toBottomOf="@id/textinput_releasedyear" />
+        android:id="@+id/recordStopButton"
+        android:layout_width="174dp"
+        android:layout_height="48dp"
+        android:onClick="stopRecording"
+        android:text="recording stop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.103" />
 
     <Button
-        android:id="@+id/button_insert"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="insertDB"
-        android:text="INSERT"
-        app:layout_constraintBottom_toTopOf="@id/scrollView"
-        app:layout_constraintLeft_toRightOf="@id/button_init"
-        app:layout_constraintRight_toLeftOf="@id/button_search"
-        app:layout_constraintTop_toBottomOf="@id/textinput_releasedyear" />
+        android:id="@+id/startPlayButton"
+        android:layout_width="180dp"
+        android:layout_height="49dp"
+        android:onClick="startPlay"
+        android:text="play start"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.19" />
 
     <Button
-        android:id="@+id/button_search"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="searchDB"
-        android:text="SEARCH"
-        app:layout_constraintBottom_toTopOf="@id/scrollView"
-        app:layout_constraintLeft_toRightOf="@id/button_insert"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textinput_releasedyear" />
+        android:id="@+id/stopPlayButton"
+        android:layout_width="180dp"
+        android:layout_height="49dp"
+        android:onClick="stopPlay"
+        android:text="play end"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.278" />
 
-    <ScrollView
-        android:id="@+id/scrollView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/button_insert"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_width="414dp"
+        android:layout_height="461dp"
+        android:layout_marginTop="272dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/text_title_column_one"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toTopOf="@id/text_column_one"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toLeftOf="@id/text_title_column_two"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/text_title_column_two"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toTopOf="@id/text_column_two"
-                app:layout_constraintLeft_toRightOf="@+id/text_title_column_one"
-                app:layout_constraintRight_toLeftOf="@id/text_title_column_three"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/text_title_column_three"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintLeft_toRightOf="@+id/text_title_column_two"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/text_column_three"/>
-
-            <TextView
-                android:id="@+id/text_column_one"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toLeftOf="@id/text_column_two"
-                app:layout_constraintTop_toBottomOf="@id/text_title_column_one" />
-
-            <TextView
-                android:id="@+id/text_column_two"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toRightOf="@id/text_column_one"
-                app:layout_constraintRight_toLeftOf="@id/text_column_three"
-                app:layout_constraintTop_toBottomOf="@id/text_title_column_two" />
-
-            <TextView
-                android:id="@+id/text_column_three"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toRightOf="@id/text_column_two"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/text_title_column_three" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </ScrollView>
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
